--- a/worker-belles-terres/wrangler.toml
+++ b/worker-belles-terres/wrangler.toml
@@ -1,9 +1,9 @@
-name = "worker-belles-terres"
+name = "dark-rice-25ee"
 main = "src/index.js"
 compatibility_date = "2025-11-11"
+workers_dev = true
 
 # R2: journal et mémoires de classe
 [[r2_buckets]]
 binding = "LOGS_BUCKET"     # => accessible dans le code via env.LOGS_BUCKET
 bucket_name = "bt-logs"     # => crée/active ce bucket dans le dashboard R2
-workers_dev = true
